--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <a href="https://www.facebook.com/Danuk.biyanwila/"><img src="./img/facebook.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2020 Danuk. All rights reserved</p>
+      <p>Copyright © 2020 Danuk. All rights reserve</p>
     </div>
   </section>
   <!-- End Footer -->
