--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
+        <h2>Full stack Developer</h2>
         <p>As a dedicated Information Technology undergraduate, I am enthusiastic about using technology to tackle real-world challenges. 
           My strong foundation in software engineering principles is complemented by my skills in web and mobile app development. 
           I thrive in dynamic learning environments and am always eager to expand my knowledge and take on new challenges. 
